objects/smlfcom__SML_Insight_Chart_Config__mdt.object
<CustomObject>
    <fields>
        <fullName>smlfcom__Config_Name__c</fullName>
        <label>Config Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Insight_Chart_Values__c</fullName>
        <label>Insight Chart Values</label>
        <type>TextArea</type>
    </fields>
    <label>SML Insight Chart Config</label>
    <pluralLabel>SML Insight Chart Configs</pluralLabel>
</CustomObject>